k8s/manual/rc-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rc-web
  labels:
    app: rc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rc-web
  template:
    metadata:
      labels:
        app: rc-web
    spec:
      containers:
        - name: rc-web
          image: docker.io/library/rc-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: rc-web
  labels:
    app: rc-web
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: rc-web
