k8s/manual/do-sit-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.daksha-rc.in`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
