k8s/manual/rc-web-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: daksha-rc
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rc.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: dev-rc-app
          port: 8000
  tls:
    secretName: wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dev-rc-app-redirect
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rc.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: dev-rc-app
          port: 8000
      middlewares:
        - name: redirect-to-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
