k8s/manual/sit-traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.150.241.245.84.nip.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
