k8s/manual/traefik-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-redirect
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: redirect-to-https
          namespace: traefik-system
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: traefik-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
